# GmSSLDemo

./: README.md  _shared.sh  build-gmssl4android.sh
app/: build.gradle
app/src/androidTest/java/com/example/gmssldemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  GmSSL.c  gmssl_err.c  gmssl_err.h  log.h  native-lib.cpp  utils.cpp  utils.h
app/src/main/java/com/example/gmssldemo/: GmSSL.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/example/gmssldemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
